chnage the restaurant test for redis